# python_api

./: makefile  pyproject.toml  readme.md  requirements.txt
src/app/: main.py
src/app/api/v1/: api.py  hello.py
src/app/api/v1/counter/: __init__.py  router.py
src/domain/models/: __init__.py  counter.py
src/domain/repositories/: counter_repo.py
src/domain/services/: counter_service.py
